--- a/src/pages/apps/pokegrader/pokegrader.scss
+++ b/src/pages/apps/pokegrader/pokegrader.scss
@@ -1,7 +1,8 @@
 .pokegrader {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: fill-available;
+    height: -webkit-fill-available;
     max-width: 100%;
 
     iframe {
